--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     <!--Header-->
 
     <nav>
-      <img class="logoMobile" src="images/logo.png" alt="" />
-      <a href="#"><img class="bar" src="images/bar.png" alt="bar" /></a>
+      <div class="navMobile">
+        <img class="logoMobile" src="images/logo.png" alt="" />
+        <a href="#"><img class="bar" src="images/bar.png" alt="bar" /></a>
+      </div>
       <ul class="navBar">
         <li><a href="#about">ABOUT</a></li>
         <li><a href="#services">SERVICES</a></li>
